fix picture overlap in small phone

--- a/src/stylesheets/ProjectParallaxPhone.scss
+++ b/src/stylesheets/ProjectParallaxPhone.scss
@@ -47,7 +47,7 @@
             color: #444;
             overflow: hidden;
             text-overflow: ellipsis;
-            top: 40vh;
+            top: 45vh;
             max-height: 50vh;
             text-overflow: ellipsis;
             p {
